objects/Cobalt_WebID_History__c.object
<CustomObject>
    <description>Used by CB Services to track legacy WebID history from Cobalt Advantage SF instance</description>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt Consolidation ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebID__c</fullName>
        <label>WebID</label>
        <referenceTo>WebID__c</referenceTo>
        <relationshipName>WebId_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Legacy WebID History</label>
    <nameField>
        <displayFormat>WH-{0000000}</displayFormat>
        <label>WebID History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legacy WebID History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>